# jsonschema_code_generator

./: Cargo.toml  README.md
.github/workflows/: release.yml
schemas/: draft-04.rs
src/: generated.rs  generator.rs  keywords.rs  lib.rs  parser.rs  ref_parser.rs  resolver.rs  sanitizer.rs  schema.rs
src/examples/generator/: loop1.schema.json  loop2.schema.json  name.collision.schema.json  reference.twice.schema.json
src/examples/parser/: allof.schema.json  anyof.schema.json  array.nested.schema.json  array.object.schema.json  definitions.schema.json  defs.schema.json  object.nested.property.name.fallback.schema.json  object.pattern.properties.schema.json  object.required.schema.json  object.title.schema.json  oneof.inherit.properties.schema.json  oneof.schema.json
src/examples/resolver/: definitions.json
